--- a/package.json
+++ b/package.json
@@ -9,10 +9,32 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/masked-view": "^0.1.11",
+    "@react-native-picker/picker": "2.4.8",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "bcryptjs": "^2.4.3",
     "expo": "~48.0.10",
+    "expo-file-system": "^15.2.2",
+    "expo-sqlite": "^11.1.1",
     "expo-status-bar": "~1.4.4",
+    "express": "^4.18.2",
+    "formik": "^2.2.9",
+    "jsonwebtoken": "^9.0.0",
+    "moment": "^2.29.4",
+    "mysql2": "^3.2.0",
     "react": "18.2.0",
-    "react-native": "0.71.6"
+    "react-native": "^0.71.7",
+    "react-native-cli": "^2.0.1",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
+    "react-navigation": "^4.4.4",
+    "react-navigation-stack": "^2.10.4",
+    "sequelize": "^6.31.0",
+    "winston": "^3.8.2",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
